	gcc/ 	PR tree-optimization/52633 	* tree-vect-patterns.c (vect_vect_recog_func_ptrs): Swap order of 	vect_recog_widen_shift_pattern and vect_recog_over_widening_pattern. 	(vect_recog_over_widening_pattern): Remove handling of code that was 	already detected as over-widening pattern.  Remove special handling 	of "unsigned" cases.  Instead, support general case of conversion 	of the shift result to another type.

gcc/testsuite/
	PR tree-optimization/52633
	* gcc.dg/vect/vect-over-widen-1.c: Two patterns should now be
	recognized as widening shifts instead of over-widening.
	* gcc.dg/vect/vect-over-widen-1-big-array.c: Likewise.
	* gcc.dg/vect/vect-over-widen-4.c: Likewise.
	* gcc.dg/vect/vect-over-widen-4-big-array.c: Likewise.
	* gcc.target/arm/pr52633.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@187158 138bc75d-0d04-0410-961f-82ee72b054a4